evaluation and forecast

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Looking for Non-seasonal trends and Stationarity"
+    "## Forecasting Retail Sales"
    ]
   },
   {
