--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -587,7 +587,9 @@
     "2. **Covariance matrix is singular or near-singular, with condition number \\(2 \\times 10^{33}\\)**: This implies potential instability in the estimation of standard errors.\n",
     "\n",
     "\n",
-    "The ARIMA(1,0,3) model is evidently the best fit based on the AIC criterion. The diagnostics suggest that while the model fits well in terms of autocorrelation, the residuals are not normally distributed and exhibit heteroskedasticity. Caution should be exercised in interpreting the results due to potential instability in standard errors, as indicated by the warnings.\n"
+    "The ARIMA(1,0,3) model is evidently the best fit based on the AIC criterion. The diagnostics suggest that while the model fits well in terms of autocorrelation, the residuals are not normally distributed and exhibit heteroskedasticity. Caution should be exercised in interpreting the results due to potential instability in standard errors, as indicated by the warnings. \n",
+    "\n",
+    "Let's try a more thorough grid search to see if we can find a better model.\n"
    ]
   },
   {
